Inserted link to profile

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="github.com/Schmitzii">Moritz Schmitz</a>.
+      >. Coded by <a href="https://www.github.com/Schmitzii">Moritz Schmitz</a>.
     </div>
   </body>
 </html>
